# Path-Tracer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_debug.sh  build_release.sh  build_release_clang.bat  imgui.ini
shader/: compute_shader.comp  denoiser.comp  gbuffer.frag  gbuffer.vert  generate.comp  resolve.comp  shade_dielectric.comp  shade_emissive.comp  shade_lambertian.comp  shade_metal.comp  trace.comp  trace_shadow.comp
shader/common/: bvh_traversal.glsl  path_state.glsl  primitives.glsl  queue.glsl  rng.glsl  scene_buffers.glsl
src/: application.cpp  application.h  buffer.h  bvh.cpp  bvh.h  camera.cpp  camera.h  compute_shader.cpp  compute_shader.h  denoiser_pass.cpp  denoiser_pass.h  frame_buffer.cpp  frame_buffer.h  gbuffer.cpp  gbuffer.h  gl_debug.h  glad.c  gui.cpp  gui.h  gui_pass.cpp  gui_pass.h  input.h  lbvh.h  log.h  main.cpp  material.h  obj_loader.cpp  obj_loader.h  path_tracer_pass.cpp  path_tracer_pass.h  primitive.h  queue.h  raster_gbuffer_pass.cpp  raster_gbuffer_pass.h  raster_shader.cpp  raster_shader.h  render_pass.h  render_targets.cpp  render_targets.h  renderer.cpp  (+13 more)
